# cash-flow-control

./: .gitignore  README.md  pyproject.toml
cashflow/: admin.py  forms.py  models.py  urls.py  views.py
cashflow/migrations/: 0001_initial.py  0002_alter_cashflowrecord_options_alter_category_options_and_more.py  0003_seed_initial_data.py  0004_cashflowrecord_user.py
cashflow/static/cashflow/js/: scripts.js
cashflow/templates/: base.html
cashflow/templates/cashflow/: directory_confirm_delete.html  directory_form.html  directory_list.html  record_confirm_delete.html  record_form.html  record_list.html
cashflow/templates/registration/: login.html  register.html
cashflow/templatetags/: cashflow_extras.py
core/: settings.py  urls.py
docs/superpowers/plans/: 2026-06-29-cash-flow-control-plan.md
docs/superpowers/specs/: 2026-06-29-cash-flow-control-design.md
